# eta_android

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ble_audiospasialdariesp32sonaraudio/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/ble_bluetoothlowenergyesp32/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MyAudioStream.cpp
app/src/main/java/com/example/ble_audiospasialdariesp32sonaraudio/: BLEDeteksiObjekkeAudioApplication.kt
app/src/main/java/com/example/ble_audiospasialdariesp32sonaraudio/permissions/: PermissionUtils.kt  SystemBroadcastReceiver.kt
app/src/main/java/com/example/ble_audiospasialdariesp32sonaraudio/presentation/: BluetoothLEViewModel.kt  ConfigViewModel.kt  IMUCalcViewModel.kt  MainActivity.kt  Navigation.kt  OccupiedGridViewModel.kt  TextToSpeechViewModel.kt
app/src/main/java/com/example/ble_audiospasialdariesp32sonaraudio/util/: Resources.kt
app/src/main/java/com/example/ble_bluetoothlowenergyesp32/: BLEApplication.kt  MainActivity.kt
app/src/main/java/com/example/ble_bluetoothlowenergyesp32/data/: AudioXYZCoor.kt  ConfigData.kt  (+4 more)
app/src/main/python/: dataSampel.py  gait_tracking.py  sampel_data.py  testing.py
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ble_audiospasialdariesp32sonaraudio/: ExampleUnitTest.kt
app/src/test/java/com/example/ble_bluetoothlowenergyesp32/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
